Fix login form on mobile

--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -1,14 +1,9 @@
 .box {
   width: 100%;
   max-width: 375px;
-}
-
-@media (min-width: 768px) {
-  .box {
-    margin-top: 10vh;
-  }
+  margin-top: 10vh;
 }
 
 .button {
-  margin-top: 20px;
+  margin-top: 30px;
 }
