--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  overflow: hidden;
 }
 
 .button {
